Added style and images for game page.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/CSS/style.css">
+
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
@@ -11,7 +13,7 @@
         <h1>Rock Paper Scissors</h1>
     </header>
 <!-- Scoreboard code -->
-    <div class="socre-board">
+    <div class="score-board">
         <div id="user-label" class="badge">user</div>
         <div id="computer-label" class="badge">comp</div>
         <span id="user-score">0</span>:<span id="computer-score">0</span>
@@ -20,19 +22,20 @@
     <div class="result">
         <p>Paper covers rock. You win!</p>
     </div>
-    
+
 <!-- Buttons for each of the choices in the game -->
     <div class="choices">
-        <div class="choice">
+        <div class="choice" id="rock">
             <img src="assets/images/icons8-rock-100.png" alt="Image of a rock">
         </div>
-        <div class="choice">
+        <div class="choice" id="paper">
             <img src="assets/images/icons8-paper-100.png" alt="Paper outline">
         </div>
-        <div class="choice">
+        <div class="choice" id="scissors">
             <img src="assets/images/icons8-scissors-100.png" alt="Image of scissors">
         </div>
     </div>
 
+    <p id="action-message">Make your move!</p>
 </body>
 </html>
