Added event listeners to js

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/CSS/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
+<!-- Title at the top of the page -->
     <header>
         <h1>Rock Paper Scissors</h1>
     </header>
+
+
 <!-- Scoreboard code -->
     <div class="score-board">
         <div id="user-label" class="badge">user</div>
@@ -36,6 +39,6 @@
         </div>
     </div>
 
-    <p id="action-message">Make your move!</p>
+    <p id="action-message">Choose Wisely!</p>
 </body>
 </html>
