--- a/index.html
+++ b/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Rock Paper Scissors Game</title>
-</head>
-<body>
-<!-- Title at the top of the page -->
+  </head>
+  <body>
+    <!-- Title at the top of the page -->
     <header>
-        <h1>Rock Paper Scissors</h1>
+      <h1>Rock Paper Scissors</h1>
     </header>
 
-
-<!-- Scoreboard code -->
+    <!-- Scoreboard code -->
     <div class="score-board">
-        <div id="user-label" class="badge">user</div>
-        <div id="computer-label" class="badge">comp</div>
-        <span id="user-score">0</span>:<span id="computer-score">0</span>
+      <div id="user-label" class="badge">user</div>
+      <div id="computer-label" class="badge">comp</div>
+      <span id="user-score">0</span>:<span id="computer-score">0</span>
     </div>
 
     <div class="result">
-        <p>Paper covers rock. You win!</p>
+      <p>Paper covers rock. You win!</p>
     </div>
 
-<!-- Buttons for each of the choices in the game -->
+    <!-- Buttons for each of the choices in the game -->
     <div class="choices">
-        <div class="choice" id="rock">
-            <img src="assets/images/icons8-rock-100.png" alt="Image of a rock">
-        </div>
-        <div class="choice" id="paper">
-            <img src="assets/images/icons8-paper-100.png" alt="Paper outline">
-        </div>
-        <div class="choice" id="scissors">
-            <img src="assets/images/icons8-scissors-100.png" alt="Image of scissors">
-        </div>
+      <div class="choice" id="rock">
+        <img src="assets/images/icons8-rock-100.png" alt="Image of a rock" />
+      </div>
+      <div class="choice" id="paper">
+        <img src="assets/images/icons8-paper-100.png" alt="Paper outline" />
+      </div>
+      <div class="choice" id="scissors">
+        <img
+          src="assets/images/icons8-scissors-100.png"
+          alt="Image of scissors"
+        />
+      </div>
     </div>
 
     <p id="action-message">Choose Wisely!</p>
-</body>
+
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
