Added 'Rules of the Game' section to the top of the page

--- a/index.html
+++ b/index.html
@@ -14,15 +14,10 @@
       <h1>Rock Paper Scissors</h1>
     </header>
 
-    <!-- Scoreboard code -->
-    <div class="score-board">
-      <div id="user-label" class="badge">user</div>
-      <div id="computer-label" class="badge">comp</div>
-      <span id="user-score">0</span>:<span id="computer-score">0</span>
-    </div>
-
-    <div class="result">
-      <p>Paper covers rock. You win!</p>
+    <div class="rules">
+        <p>Rules of the Game:</p>
+        <br />
+        <p>Paper covers Rock - Rock smashes Scissors - Scissors cuts Paper</p>
     </div>
 
     <!-- Buttons for each of the choices in the game -->
@@ -42,6 +37,13 @@
     </div>
 
     <p id="action-message">Choose Wisely!</p>
+
+    <!-- Scoreboard code -->
+    <div class="score-board">
+      <div id="user-label" class="badge">USER</div>
+      <div id="computer-label" class="badge">COMP</div>
+      <span id="user-score">0</span>:<span id="computer-score">0</span>
+    </div>
 
     <script src="assets/js/script.js"></script>
   </body>
