--- a/index.html
+++ b/index.html
@@ -39,10 +39,22 @@
     <p id="action-message">Choose Wisely!</p>
 
     <!-- Scoreboard code -->
-    <div class="score-board">
-      <div id="user-label" class="badge">USER</div>
-      <div id="computer-label" class="badge">COMP</div>
-      <span id="user-score">0</span>:<span id="computer-score">0</span>
+    
+    <div class="container">
+        <div class="score-board">  
+            <div class="user-label">
+            <h2 class="badge">User</h2>
+            <div id="user-score">
+                <p>0</p>
+            </div>
+        </div>
+
+        <div class="user-label">
+            <h2 class="badge">Comp</h2>
+            <div id="computer-score">
+                <p>0</p>
+            </div>
+        </div>
     </div>
 
     <script src="assets/js/script.js"></script>
