Added favicon images.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Rock Paper Scissors Game</title>
+
+    <!-- Favicon code-->
+    <link rel="icon" type="image/png" href="assets/favicon/icons8-rock-ios-16-filled-32.png">
+    <link rel="icon" type="image/png" href="assets/favicon/icons8-rock-ios-16-filled-16.png">
+
   </head>
   <body>
     <!-- Title at the top of the page -->
